--- a/netlify.toml
+++ b/netlify.toml
@@ -1,25 +1,29 @@
-# example netlify.toml
+# netlify.toml
 [build]
-  command = "quasar build"
-  functions = "netlify/functions"
-  publish = "dist/spa"
+  publish = "dist"  # Caminho onde o Quasar gera a versão de produção
+  command = "quasar build"  # Comando para construir o app
 
+[[headers]]
+  for = "/*"
+  [headers.values]
+    # Garante que o conteúdo seja servido por HTTPS
+    X-Content-Type-Options = "nosniff"
+    X-Frame-Options = "DENY"
+    X-XSS-Protection = "1; mode=block"
+    # Permite o uso de service workers em PWA
+    Service-Worker-Allowed = "/"
 
+[[headers]]
+  for = "/service-worker.js"
+  [headers.values]
+    Cache-Control = "no-cache"
 
+[[headers]]
+  for = "/manifest.json"
+  [headers.values]
+    Cache-Control = "no-cache"
 
-
-  ## Uncomment to use this redirect for Single Page Applications like create-react-app.
-  ## Not needed for static site generators.
-  [[redirects]]
-   from = "/*"
-   to = "/index.html"
-   status = 200
-
-  ## (optional) Settings for Netlify Dev
-  ## https://github.com/netlify/cli/blob/main/docs/netlify-dev.md#project-detection
-  #[dev]
-  #  command = "yarn start" # Command to start your dev server
-  #  port = 3000 # Port that the dev server will be listening on
-  #  publish = "dist" # Folder with the static content for _redirect file
-
-  ## more info on configuring this file: https://www.netlify.com/docs/netlify-toml-reference/
+[[headers]]
+  for = "/icons/*"
+  [headers.values]
+    Cache-Control = "public, max-age=31536000, immutable"
