--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "chronofit-project",
+  "name": "Chronofit",
   "version": "0.0.1",
   "description": "A ChronoFit Project",
   "productName": "ChronoFit App",
